# bazel-proxy

./: BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/: BUILD.bazel  main.go
cmd/mapper/: BUILD.bazel  main.go
cmd/proxy/: BUILD.bazel  main.go
mapper/: BUILD.bazel  mapper.go  target.go
proto/: BUILD.bazel  build_event_stream.proto  command_line.proto  failure_details.proto  invocation_policy.proto  option_filters.proto  wrapper.proto
writer/: BUILD.bazel  writer.go
