load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/hj1980/bazel-proxy/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@bazel_remote_apis//build/bazel/remote/logstream/v1:go_default_library",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//backoff:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_grpc//stats:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
