load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "wrapper_proto",
    srcs = ["wrapper.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/devtools/build/v1:build_proto"],
)

go_proto_library(
    name = "wrapper_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/wrapper",
    proto = ":wrapper_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/devtools/build/v1:build_go_proto"],
)
