load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "wrapper_proto",
    srcs = ["wrapper.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/devtools/build/v1:build_proto"],
)

go_proto_library(
    name = "wrapper_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/wrapper",
    proto = ":wrapper_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/devtools/build/v1:build_go_proto"],
)

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":command_line_proto",
        ":failure_details_proto",
        ":invocation_policy_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "command_line_proto",
    srcs = ["command_line.proto"],
    visibility = ["//visibility:public"],
    deps = [":options_proto"],
)

proto_library(
    name = "failure_details_proto",
    srcs = ["failure_details.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "options_proto",
    srcs = ["option_filters.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/build_event_stream",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":command_line_go_proto",
        ":failure_details_go_proto",
        ":invocation_policy_go_proto",
    ],
)

go_proto_library(
    name = "command_line_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/command_line",
    proto = ":command_line_proto",
    visibility = ["//visibility:public"],
    deps = [":options_go_proto"],
)

go_proto_library(
    name = "failure_details_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/failure_details",
    proto = ":failure_details_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "invocation_policy_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/invocation_policy",
    proto = ":invocation_policy_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "github.com/hj1980/bazel-proxy/protobuf/types/known/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)
