load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "proxy_lib",
    srcs = ["main.go"],
    importpath = "github.com/hj1980/bazel-proxy/cmd/proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:wrapper_go_proto",
        "//writer",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)

go_binary(
    name = "proxy",
    embed = [":proxy_lib"],
    visibility = ["//visibility:public"],
)
